--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-<title>Chillaidsdsa</title>
+<title>MANA</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="/MANA/public/layout/styles/landing/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -14,13 +14,13 @@
   <header id="header" class="hoc clear">
     <div id="logo" class="fl_left"> 
       <!-- ################################################################################################ -->
-      <h1 class="logoname"><a href="/MANA/app/views/home.php">Chssill<span>a</span>id</a></h1>
+      <h1 class="logoname"><a href="/MANA/app/views/home.php"><span>M</span><span>A</span><span>N</span><span>A</span></a></h1>
       <!-- ################################################################################################ -->
     </div>
     <nav id="mainav" class="fl_right"> 
       <!-- ################################################################################################ -->
       <ul class="clear">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="/mana/">Home</a></li>
         <li><a class="drop" href="#">Pages</a>
           <ul>
             <li><a href="/MANA/public/layout/pages/gallery.html">Gallery</a></li>
@@ -59,9 +59,9 @@
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <h3 class="heading">Faucibus porttitor metus</h3>
-      <p>In nibh nullam egestas velit laoreet nullam elementum ipsum pharetra suscipit leo augue pretium felis nisl vitae ipsum curabitur quis libero.</p>
-      <footer><a class="btn" href="#">Tristique vehicula</a></footer>
+      <h3 class="heading">Cuidemos el medio ambiente</h3>
+      <p>Una web para hacer conciencia sobre la vida de los ecosistemas terrestres.</p>
+      <footer><a class="btn" href="/MANA/public/layout/pages/form.html">Formulario</a></footer>
     </article>
     <!-- ################################################################################################ -->
   </div>
