Cambios barra de navegación
Se cambió la barra de navegación y se agregó enlace al repositorio. Falta cambiar los vínculos a las demás pestañas.

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     <nav id="mainav" class="fl_right"> 
       <!-- ################################################################################################ -->
       <ul class="clear">
-        <li class="active"><a href="/mana/">Home</a></li>
-        <li><a class="drop" href="#">Pages</a>
+        <li class="active"><a href="/mana/">Inicio</a></li>
+        <!-- <li><a class="drop" href="#">Pages</a>
           <ul>
             <li><a href="/MANA/public/layout/pages/gallery.html">Gallery</a></li>
             <li><a href="/MANA/public/layout/pages/full-width.html">Full Width</a></li>
@@ -43,10 +43,12 @@
             </li>
             <li><a href="#">Level 2</a></li>
           </ul>
-        </li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li><a href="#">Link Text</a></li>
+        </li> -->
+        <li><a href="#">Acerca de nosotros</a></li>
+        <li><a href="#">Contáctanos</a></li> 
+        <li><a href="#">Objetivo</a></li>
+        <li><a href="https://github.com/AlejaSj/MANA/">Repositorio</a></li>
+        <li><a href="#">Estadísticas</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </nav>
