Agrege favicon a index (falta agregar a los demas)

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="/MANA/public/layout/styles/landing/layout.css" rel="stylesheet" type="text/css" media="all">
+<link rel="icon" href="/MANA/public/images/favicon-16x16.png" type="image/x-icon">
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
