--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         <li><a href="#">Contáctanos</a></li> 
         <li><a href="#">Objetivo</a></li>
         <li><a href="https://github.com/AlejaSj/MANA/">Repositorio</a></li>
-        <li><a href="#">Estadísticas</a></li>
+        <li><a href="http://localhost/MANA/app/views/dashboard.php">Estadísticas</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </nav>
