--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
             <li><a href="#">Level 2</a></li>
           </ul>
         </li> -->
-        <li><a href="#">Acerca de nosotros</a></li>
-        <li><a href="#">Contáctanos</a></li> 
-        <li><a href="#">Objetivo</a></li>
+        <li><a href="http://localhost/MANA/app/views/AboutUs.php">Acerca de nosotros</a></li>
+        <li><a href="#ContactUs">Contáctanos</a></li> 
+        <li><a href="#Objective">Objetivo</a></li>
         <li><a href="https://github.com/AlejaSj/MANA/">Repositorio</a></li>
         <li><a href="http://localhost/MANA/app/views/dashboard.php">Estadísticas</a></li>
       </ul>
@@ -126,7 +126,7 @@
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
       <p class="nospace font-xs">Quis leo hendrerit lectus morbi</p>
-      <h6 class="heading font-x2">Justo mauris tempus pharetra</h6>
+      <h6 class="heading font-x2" id="Objective">Justo mauris tempus pharetra</h6>
     </div>
     <ul class="nospace group elements elements-three">
       <li class="one_third">
@@ -319,7 +319,7 @@
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
       <p class="nospace font-xs">Enim eleifend dignissim bibendum</p>
-      <h6 class="heading font-x2">Id tristique id metus nulla</h6>
+      <h6 class="heading font-x2" id="ContactUs">Id tristique id metus nulla</h6>
     </div>
     <figure class="one_half first">
       <ul class="nospace clear">
