--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         </li> -->
         <li><a href="http://localhost/MANA/app/views/AboutUs.php">Acerca de nosotros</a></li>
         <li><a href="#ContactUs">Contáctanos</a></li> 
-        <li><a href="#Objective">Objetivo</a></li>
+        <li><a href="#Objective">Objetivos</a></li>
         <li><a href="https://github.com/AlejaSj/MANA/">Repositorio</a></li>
         <li><a href="http://localhost/MANA/app/views/dashboard.php">Estadísticas</a></li>
       </ul>
@@ -79,38 +79,38 @@
     <section id="introblocks">
       <ul class="nospace group btmspace-80 elements elements-four">
         <li class="one_quarter">
-          <article><a href="#"><i class="fas fa-hand-rock"></i></a>
-            <h6 class="heading">Feugiat fermentum</h6>
-            <p>Ac orci proin porttitor lacus eget mi pellentesque non.</p>
+          <article><a href="https://www.reddearboles.org/noticias/nwarticle/473/3/pasos-a-tener-en-cuenta-para-el-mantenimiento-areas-verdes"><i class="fas fa-tree"></i></i></a>
+            <h6 class="heading">Cuidado los parques</h6>
+            <p>Mantén áreas verdes libres de basura.</p>
           </article>
         </li>
         <li class="one_quarter">
-          <article><a href="#"><i class="fas fa-dove"></i></a>
-            <h6 class="heading">Malesuada accumsan</h6>
-            <p>Sapien sed metus congue sodales vivamus scelerisque.</p>
+          <article><a href="https://www.gob.mx/siap/articulos/a-reducir-el-uso-de-plaguicidas"><i class="fas fa-bug"></i></i></i></i></a>
+            <h6 class="heading">Químicos Seguros</h6>
+            <p>Reduce el uso de pesticidas y fertilizantes químicos.</p>
           </article>
         </li>
         <li class="one_quarter">
-          <article><a href="#"><i class="fas fa-history"></i></a>
-            <h6 class="heading">Mauris placerat</h6>
-            <p>Et interdum vulputate purus nisl fringilla sapien quis.</p>
+          <article><a href="https://www.gob.mx/conanp/articulos/las-tres-erres-magicas?idiom=es"><i class="fas fa-recycle"></i></i></a>
+            <h6 class="heading">Reutiliza</h6>
+            <p>Usa productos reutilizables como botellas o bolsas de tela.</p>
           </article>
         </li>
         <li class="one_quarter">
-          <article><a href="#"><i class="fas fa-heartbeat"></i></a>
-            <h6 class="heading">Elementum rhoncus</h6>
-            <p>Sollicitudin dui mauris dui nunc lorem tortor pharetra.</p>
+          <article><a href="https://www.gob.mx/semarnat/articulos/como-plantar-un-arbol-179529"><i class="fas fa-seedling"></i></i></a>
+            <h6 class="heading">Reforesta</h6>
+            <p>Planta árboles en tu comunidad.</p>
           </article>
         </li>
       </ul>
     </section>
     <!-- ################################################################################################ -->
     <section class="group shout">
-      <figure class="one_half first"><img src="/MANA/public/images/landing/546x356.png" alt="">
-        <figcaption class="heading"><a href="#">Accumsan placerat</a></figcaption>
+      <figure class="one_half first"><img src="/MANA/public/images/landing/ODS.png" alt="">
+        <figcaption class="heading"><a href="https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/">Objetivos de Desarrollo Sostenible</a></figcaption>
       </figure>
-      <figure class="one_half"><img src="/MANA/public/images/landing/546x356.png" alt="">
-        <figcaption class="heading"><a href="#">Scelerisque etiam</a></figcaption>
+      <figure class="one_half"><img src="/MANA/public/images/landing/ODS15.png" alt="">
+        <figcaption class="heading"><a href="https://www.pactomundial.org/ods/15-vida-de-ecosistemas-terrestres/">¿En qué consiste?</a></figcaption>
       </figure>
     </section>
     <!-- ################################################################################################ -->
@@ -125,44 +125,44 @@
   <section id="services" class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <p class="nospace font-xs">Quis leo hendrerit lectus morbi</p>
-      <h6 class="heading font-x2" id="Objective">Justo mauris tempus pharetra</h6>
+      <!--<p class="nospace font-xs">Quis leo hendrerit lectus morbi</p>-->
+      <h6 class="heading font-x2" id="Objective" style="font-size: 40px">Objetivos</h6>
     </div>
     <ul class="nospace group elements elements-three">
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-hourglass-half"></i></a>
-          <h6 class="heading">Sociis natoque penatibus</h6>
-          <p>Interdum at congue semper purus nullam quis odio id justo accumsan ullamcorper maecenas vel arcu nulla tincidunt elit ornare.</p>
+        <article><a><i class="fas fa-seedling"></i></a>
+          <h6 class="heading">Conservar Ecosistemas</h6>
+          <p>Proteger y restaurar ecosistemas terrestres como bosques, asegurando su biodiversidad y función natural para el futuro.</p>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-paw"></i></a>
-          <h6 class="heading">Magnis parturient montes</h6>
-          <p>Urna proin venenatis eros viverra ultrices fringilla lectus urna consequat erat eget scelerisque ligula felis nec neque nam.</p>
+        <article><a><i class="fas fa-paw"></i></a>
+          <h6 class="heading">Proteger Especies</h6>
+          <p>Prevenir la extinción de especies animales y vegetales, especialmente aquellas en peligro crítico, restaurando sus hábitats.</p>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-sliders-h"></i></a>
-          <h6 class="heading">Nascetur ridiculus aenean</h6>
-          <p>Vitae ipsum vitae velit porttitor aliquam in quam aliquam ullamcorper sem a auctor dapibus nisi nunc vehicula nunc quis mattis.</p>
+        <article><a><i class="fas fa-people-carry"></i></a>
+          <h6 class="heading">Involucrar Comunidades</h6>
+          <p>Integrar a las comunidades locales en la conservación y restauración, valorando sus conocimientos y prácticas tradicionales.</p>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-tty"></i></a>
-          <h6 class="heading">Ullamcorper neque phasellus</h6>
-          <p>Pede turpis at elit nunc at urna sed ligula vivamus vel erat at diam imperdiet pharetra quisque justo turpis mattis ut vitae.</p>
+        <article><a><i class="fas fa-recycle"></i></a>
+          <h6 class="heading">Fomentar el Uso Sostenible</h6>
+          <p>Asegurar que los recursos naturales sean usados de manera sostenible, apoyando el consumo consciente.</p>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-table"></i></a>
-          <h6 class="heading">Aliquet lacus nulla erat</h6>
-          <p>Tortor aenean leo ipsum elementum non cursus eu interdum ut risus proin risus nibh viverra eget lobortis feugiat egestas in nisl.</p>
+        <article><a><i class="fas fa-globe"></i></a>
+          <h6 class="heading">Combatir la Desertificación</h6>
+          <p>Reducir la degradación del suelo y prevenir la expansión de áreas desérticas, promoviendo prácticas sostenibles.</p>
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><i class="fas fa-hand-holding-usd"></i></a>
-          <h6 class="heading">Aliquam volutpat curabitur</h6>
-          <p>Fusce dignissim neque vitae justo aenean ac urna et leo posuere pretium nunc bibendum enim quis imperdiet elementum dui dolor.</p>
+        <article><a><i class="fas fa-tree"></i></a>
+          <h6 class="heading">Detener la Deforestación</h6>
+          <p>Frenar la pérdida de bosques y promover la reforestación, asegurando la sostenibilidad de los recursos forestales.</p>
         </article>
       </li>
     </ul>
@@ -172,10 +172,10 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
- 
+<!--
 <div class="wrapper row3">
   <section class="hoc container clear"> 
-    <!-- ################################################################################################ -->
+    <!- ################################################################################################ ->
     <div class="sectiontitle">
       <p class="nospace font-xs">Rutrum erat nec mollis augue mauris</p>
       <h6 class="heading font-x2">Ac pede phasellus commodo</h6>
@@ -198,15 +198,16 @@
         <p>Venenatis</p>
       </li>
     </ul>
-    <!-- ################################################################################################ -->
+    <!- ################################################################################################ ->
   </section>
 </div>
+-->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper gradient">
+<!--<div class="wrapper gradient">
   <div class="hoc container clear"> 
-    <!-- ################################################################################################ -->
+    <!- ################################################################################################ ->
     <div class="sectiontitle">
       <p class="nospace font-xs">Purus ut mi sed velit urna ut</p>
       <h6 class="heading font-x2">Sapien posuere in iaculis</h6>
@@ -228,15 +229,16 @@
         </figure>
       </li>
     </ul>
-    <!-- ################################################################################################ -->
+    <!- ################################################################################################ ->
   </div>
-</div>
+</div>-->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
+<!--
 <div class="wrapper coloured">
   <section id="testimonials" class="hoc container clear"> 
-    <!-- ################################################################################################ -->
+    <!- ################################################################################################ ->
     <div class="sectiontitle">
       <p class="nospace font-xs">Maecenas ultrices faucibus felis</p>
       <h6 class="heading font-x2">Nunc lacus nulla luctus duis</h6>
@@ -257,15 +259,15 @@
       </figure>
       <blockquote>Orci vitae dolor scelerisque blandit morbi eu dui sed volutpat etiam leo leo bibendum vel dictum sed sollicitudin a mi pellentesque ligula nulla facilisi sed bibendum ornare.</blockquote>
     </article>
-    <!-- ################################################################################################ -->
+    <!- ################################################################################################ ->
   </section>
-</div>
+</div>-->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper row3">
+<!-- <div class="wrapper row3">
   <section class="hoc container clear"> 
-    <!-- ################################################################################################ -->
+    <!- ################################################################################################ ->
     <div class="sectiontitle">
       <p class="nospace font-xs">Lorem aenean nunc aenean sagittis</p>
       <h6 class="heading font-x2">Imperdiet massa maecenas</h6>
@@ -308,8 +310,8 @@
         </article>
       </li>
     </ul>
-    <!-- ################################################################################################ -->
-  </section>
+    <!- ################################################################################################ ->
+  </section>-->
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -318,27 +320,27 @@
   <section id="ctdetails" class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <p class="nospace font-xs">Enim eleifend dignissim bibendum</p>
-      <h6 class="heading font-x2" id="ContactUs">Id tristique id metus nulla</h6>
+      <!--<p class="nospace font-xs">Enim eleifend dignissim bibendum</p>-->
+      <h6 class="heading font-x2" id="ContactUs">Contáctanos</h6>
     </div>
     <figure class="one_half first">
       <ul class="nospace clear">
-        <li class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>Give us a call:</strong> +00 (123) 456 7890</span></li>
-        <li class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> support@domain.com</span></li>
-        <li class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="#">our location</a></span></li>
+        <li class="block clear"><a><i class="fas fa-phone"></i></a> <span><strong>Llámanos:</strong> +52 (222) 451 7890</span></li>
+        <li class="block clear"><a><i class="fas fa-envelope"></i></a> <span><strong>Envía tu correo:</strong> sugerencias@MANA.com</span></li>
+        <!--<li class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="#">our location</a></span></li>-->
       </ul>
     </figure>
     <article class="one_half">
-      <h6 class="heading">Purus nullam arcu integer</h6>
-      <p class="nospace btmspace-15">Elementum nisi ac volutpat vestibulum enim mi tincidunt eros sed justo magna odio sed lacus ut non ante sit amet est luctus dictum ut dolor ac.</p>
-      <form action="#" method="post">
+      <h6 class="heading">Ayuda</h6>
+      <p class="nospace btmspace-15">Para sugerencias, preguntas o errores no dudes en contactarnos.</p>
+      <!--<form action="#" method="post">
         <fieldset>
           <legend>Newsletter:</legend>
           <input type="text" value="" placeholder="Name">
           <input type="text" value="" placeholder="Email">
           <button type="submit" value="submit">Submit</button>
         </fieldset>
-      </form>
+      </form>-->
     </article>
     <!-- ################################################################################################ -->
   </section>
@@ -350,17 +352,14 @@
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="one_quarter first">
-      <h1 class="logoname"><a href="/MANA/app/views/home.php">Chill<span>a</span>id</a></h1>
-      <p>Scelerisque facilisis sapien turpis facilisis libero eu viverra purus dui ac leo sed vitae diam morbi sed nibh in eget dolor phasellus rhoncus odio morbi elit nunc id elit donec elementum [<a href="#">&hellip;</a>]</p>
+      <h1 class="logoname"><a href="/MANA/app/views/home.php"><span>M</span><span>A</span><span>N</span><span>A</span></a></h1>
       <ul class="faico clear">
-        <li><a class="faicon-facebook" href="#"><i class="fab fa-facebook"></i></a></li>
-        <li><a class="faicon-google-plus" href="#"><i class="fab fa-google-plus-g"></i></a></li>
-        <li><a class="faicon-linkedin" href="#"><i class="fab fa-linkedin"></i></a></li>
-        <li><a class="faicon-twitter" href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a class="faicon-vk" href="#"><i class="fab fa-vk"></i></a></li>
+        <li><a class="faicon-facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
+        <li><a class="faicon-linkedin" href="https://github.com/AlejaSj/MANA/"><i class="fab fa-github"></i></a></li>
+        <li><a class="faicon-twitter" href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a></li>
       </ul>
     </div>
-    <div class="one_quarter">
+    <!--<div class="one_quarter">
       <h6 class="heading">Volutpat metus nullam</h6>
       <ul class="nospace linklist">
         <li><a href="#">Sagittis leo morbi quis</a></li>
@@ -400,7 +399,7 @@
           </article>
         </li>
       </ul>
-    </div>
+    </div>-->
     <!-- ################################################################################################ -->
   </footer>
 </div>
@@ -410,7 +409,7 @@
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+    <p class="fl_left">Copyright &copy; 2024 - All Rights Reserved - <a href="/mana/">MANA.com</a></p>
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
     <!-- ################################################################################################ -->
   </div>
