--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,8 @@
         <li><a class="faicon-twitter" href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a></li>
       </ul>
     </div>
-  
+  </footer>
+</div>
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
     
