--- a/public/index.html
+++ b/public/index.html
@@ -161,20 +161,14 @@
     <div class="one_quarter first">
       <h1 class="logoname"><a href="/MANA/app/views/home.php"><span>M</span><span>A</span><span>N</span><span>A</span></a></h1>
       <ul class="faico clear">
-        <li><a class="faicon-facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
         <li><a class="faicon-linkedin" href="https://github.com/AlejaSj/MANA/"><i class="fab fa-github"></i></a></li>
-        <li><a class="faicon-twitter" href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a></li>
-      </ul>
+        </ul>
+        
     </div>
+    <p class="fl_right">© 2024 MANA Ediciones®. Todos los derechos reservados.
+      Queda estrictamente prohibida la copia total o parcial, la mutilación y el cambio de sentido de este texto, aquel que viole los derechos del autor, será considerado un copión sin creatividad ni ideas propias.
+      </p>
   </footer>
-</div>
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear"> 
-    
-    <p class="fl_left">Copyright &copy; 2024 - All Rights Reserved - <a href="/mana/">MANA.com</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-   
-  </div>
 </div>
 
 <a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
